Update streamlit_config.yaml to point directly to week 7 folder

--- a/Assignment/streamlit_config.yaml
+++ b/Assignment/streamlit_config.yaml
@@ -1,4 +1,4 @@
 # Streamlit Cloud Configuration
-mainModule: app.py
+mainModule: week 7/app.py
 # Use root requirements file to avoid space in path issues
-requirementsFile: requirements.txt 
+requirementsFile: week 7/requirements.txt 
