--- a/Assignment/week 7/.streamlit/config.toml
+++ b/Assignment/week 7/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 primaryColor = "#ff4b4b"
-backgroundColor = "#FFFFFF"
-secondaryBackgroundColor = "#f0f2f6"
-textColor = "#262730"
+backgroundColor = "#000000"
+secondaryBackgroundColor = "#111111"
+textColor = "#FFFFFF"
 font = "sans serif" 
