--- a/week_8/requirements.txt
+++ b/week_8/requirements.txt
@@ -21,4 +21,5 @@ plotly>=5.10.0
 google-generativeai>=0.3.0
 langchain-google-genai>=0.0.1
 huggingface-hub>=0.10.0
-langchain-huggingface 
+langchain-huggingface
+pysqlite3-binary 
