--- a/week_8/requirements.txt
+++ b/week_8/requirements.txt
@@ -14,7 +14,7 @@ accelerate>=0.10.0
 datasets>=2.0.0
 pdfminer.six>=20200517
 pypdf>=3.0.0
-chromadb>=0.3.0
+langchain-chroma
 tiktoken>=0.4.0
 langchain-openai>=0.0.1
 plotly>=5.10.0
